# subgrid

./: Cargo.toml  LICENSE  README.md  Trunk.toml  package-lock.json  tailwind.config.js
.cargo/: config.toml
cargo-tmp/: .rustc_info.json
cargo-tmp/release/.fingerprint/ahash-02b807798f63ca42/: lib-ahash  lib-ahash.json
cargo-tmp/release/.fingerprint/ahash-30738afa9c2a5c2d/: build-script-build-script-build  build-script-build-script-build.json
cargo-tmp/release/.fingerprint/ahash-bdd478e3c0cb220f/: run-build-script-build-script-build  run-build-script-build-script-build.json
cargo-tmp/release/.fingerprint/aho-corasick-ca02427ce2ad90c0/: lib-aho_corasick  lib-aho_corasick.json
cargo-tmp/release/.fingerprint/allocator-api2-2c5700828953611b/: lib-allocator_api2  lib-allocator_api2.json
cargo-tmp/release/.fingerprint/anyhow-2fcd6483b84c02ea/: build-script-build-script-build  build-script-build-script-build.json
cargo-tmp/release/.fingerprint/anyhow-366a599b6ef6db09/: run-build-script-build-script-build  run-build-script-build-script-build.json
cargo-tmp/release/.fingerprint/anyhow-3d8a740bd845081b/: lib-anyhow  lib-anyhow.json
cargo-tmp/release/.fingerprint/ast_node-b33081c0f3de8e8e/: lib-ast_node  lib-ast_node.json
cargo-tmp/release/.fingerprint/autocfg-94330e79d74a0860/: lib-autocfg  lib-autocfg.json
cargo-tmp/release/.fingerprint/aws-lc-sys-9919b0949ea3c5cc/: build-script-build-script-main  build-script-build-script-main.json
cargo-tmp/release/.fingerprint/base64-simd-ea1d2aae2511590f/: lib-base64_simd  lib-base64_simd.json
cargo-tmp/release/.fingerprint/better_scoped_tls-05d39180a77260f0/: lib-better_scoped_tls  lib-better_scoped_tls.json
cargo-tmp/release/.fingerprint/bitflags-d94f0de844a5d030/: lib-bitflags  lib-bitflags.json
cargo-tmp/release/.fingerprint/bitvec-f2af802fa2ce205d/: lib-bitvec  lib-bitvec.json
cargo-tmp/release/.fingerprint/block-buffer-98295ecb86e5b405/: lib-block_buffer  lib-block_buffer.json
cargo-tmp/release/.fingerprint/bstr-d50140a76fce6d3a/: lib-bstr  lib-bstr.json
cargo-tmp/release/.fingerprint/bytes-68a862e47ff1c6b7/: lib-bytes  (+1 more)
docs/: book.toml
documentation/: book.toml
documentation/book/: 404.html  architecture.html  aur-deploy.html  index.html  print.html  searcher-09f2665d.js  state-mgmt.html
documentation/src/: README.md  SUMMARY.md  architecture.md  aur-deploy.md
src/: lib.rs  main.rs
src-frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html
src-frontend/public/book/: 404.html  architecture.html  aur-deploy.html  index.html  print.html  searchindex-3ee75abd.js  state-mgmt.html  toc-f39a8a29.js  toc.html
src-frontend/src/: api.rs  app.rs  main.rs  main13.rs  mainX.rs  models.rs
src-frontend/src/components/: codebase.rs  dashboard.rs  mod.rs  projects.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/engine/: scheduler.rs
src/network/: protocol.rs
src/utils/: logger.rs
(+460 files in other folders)
