[workspace]
members = ["."]

[[workspace.metadata.leptos]]
name = "subgrid"
# Both fields must match your [package] name exactly
bin-package = "subgrid-frontend"
lib-package = "subgrid-frontend"
style-file = "style/main.scss"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"

[package]
name = "subgrid-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.32"
gloo-timers = { version = "0.4.0", features = ["futures"] }
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.75"
web-sys = { version = "0.3", features = ["console"] }
reqwest = { version = "0.12", features = ["json"] }
gloo-net = { version = "0.7.0", features = ["json"] }
gloo-utils = "0.3.0"
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.102"
